# eempy

./: 404.html  CITATION.cff  EEM_python_toolkit.ipynb  EEMprocessing.py  LICENSE  README.md  checklist_fluorescence_python_toolkit.docx  generate_widgets.py  index.html  interactive_toolkit.ipynb  mkdocs.yml  objects.inv  parafac_result_analysis.ipynb  pyproject.toml  read_data.py  reference_example.txt  setup.py  test.py
.github/workflows/: docs.yml
api/eem_processing/: index.html
api/plot/: index.html
api/read_data/: index.html
api/solver/: index.html
docs/: index.md
docs/api/: eem_processing.md  plot.md  read_data.md  solver.md
eem_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eempy/: EEMprocessing.py  __init__.py  eem_processing.py  plot.py  read_data.py  utils.py
eempy-vis/: app.py
eempy-vis/callbacks/: nmf.py  parafac.py  peak_picking.py  preprocessing.py  rfi.py  shared.py
eempy-vis/eem_app/: __init__.py  app_factory.py  config.py  ids.py
eempy-vis/eempy_vis/: __init__.py  app_factory.py  config.py  ids.py  serialization.py
eempy-vis/layouts/: __init__.py  nmf.py  parafac.py  peak_picking.py  preprocessing.py  rfi.py
eempy/plot/: __init__.py  (+1 more)
search/: search_index.json
tests/: EEM_python_toolkit.ipynb  Kmethod_test.py  analysis_in_paper.py  app.py  decomposition_test.py  generate_widgets.py  new_routine.py  parafac_ic_test.py  prior_knowledge_test.py  quenching_consistency_test.py  test.py  test_eem_dataset_aqy.py  test_eem_dataset_processing.py  test_eemnmf_hals.py  test_parafac_hals.py  test_validation_split.py
(+44 files in other folders)
