[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eem-python"
version = "1.5.1"
description = "A python toolkit for excitation-emission matrix (EEM) analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Yongmin Hu", email = "yongminhu@outlook.com" }
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn>=1.5.0",
  "tensorly",
  "tlviz",
  "matplotlib",
  "plotly",
  "openpyxl",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/YongminHu/eempy"

[tool.setuptools.packages.find]
where = ["."]